--- a/all.css
+++ b/all.css
@@ -2115,8 +2115,8 @@ progress {
   font-size: 1rem;
   font-weight: 400;
   line-height: 1.5;
-  color: rgba(0, 0, 0, .7);
-  background-color: var(--bs-body-bg);
+  color: var(--bs-body-color);
+  background-color: rgba(0, 0, 0, .7);
   background-clip: padding-box;
   border: var(--bs-border-width) solid var(--bs-border-color);
   -webkit-appearance: none;
