--- a/all.css
+++ b/all.css
@@ -2116,7 +2116,7 @@ progress {
   font-weight: 400;
   line-height: 1.5;
   color: var(--bs-body-color);
-  background-color: rgba(0, 0, 0, .7);
+  background-color: rgba(0, 0, 0, 0.125);
   background-clip: padding-box;
   border: var(--bs-border-width) solid var(--bs-border-color);
   -webkit-appearance: none;
