--- a/all.css
+++ b/all.css
@@ -3999,6 +3999,11 @@ textarea.form-control-lg {
   text-decoration: none;
   white-space: nowrap;
 }
+@media (max-width: 576px) {
+  .navbar-brand {
+    font-size: 11px;
+  }
+}
 .navbar-brand:hover, .navbar-brand:focus {
   color: var(--bs-navbar-brand-hover-color);
 }
