--- a/all.css
+++ b/all.css
@@ -701,6 +701,14 @@ progress {
 .blockquote-footer::before {
   content: "— ";
 }
+@media (max-width: 575px) {
+  .designer-section-title {
+      font-size: 21px;
+      line-height: 38px;
+  }
+}
+
+
 
 .img-fluid {
   max-width: 100%;
