--- a/all.css
+++ b/all.css
@@ -12991,7 +12991,7 @@ h5{
       font-size: 38px;
       line-height: 38px;
       width: 100%;
-      text-align: center; /* Centre le texte */
+      text-align: center !important; /* Centre le texte */
   }
 }
 
