--- a/all.css
+++ b/all.css
@@ -12996,6 +12996,8 @@ h5{
   .text-in-mobile {
       text-align: center !important; /* Centre le texte */
       font-size: 50% !important; 
+      padding-left: 20%;
+      padding-right: 20%;
   }
 }
 
