--- a/all.css
+++ b/all.css
@@ -12141,6 +12141,10 @@ nav .dropdown-menu .nav-link{color:rgba(0,0,0,0.6)!important;} /* Maintain Downd
   .bloc-md{
     padding:100px 10px;
   }
+  .no-display{
+    display:none !important;
+  
+  }
   
 }
 
