--- a/all.css
+++ b/all.css
@@ -13013,7 +13013,9 @@ h5{
     text-align:center !important;
   }
   .contact-mobile{
-    width: 50% !important;
+    padding-top: 10px !important;
+    padding-bottom: 10px !important;
+    font-size: 20px !important;
   }
 }
 
