--- a/all.css
+++ b/all.css
@@ -13017,6 +13017,10 @@ h5{
     padding-bottom: 10px !important;
     font-size: 20px !important;
   }
+  .mg-md{
+    margin-top:80px;
+    margin-bottom:20px;
+  }
 }
 
 .h4-bloc-1-style{
